2004-02-19  Miklos Szeredi <mszeredi@inf.bme.hu>

	* statfs library API changed to match other methods.  Since this
	  is not backward compatible FUSE_MAJOR_VERSION is changed to 2

	* statfs kernel interface changed to 64 bits, added 'bavail' field
	
2004-02-18  Miklos Szeredi <mszeredi@inf.bme.hu>

	* user-mount upgraded for 2.6.3 kernel
	
2004-02-17  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added user-mount.2.6.2-rc3.patch

	* Add FS_SAFE flag to fuse filesystem

	* fusermount should allow (un)mounting for non-root even if not
	suid-root
	
2004-02-12  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Remove MS_PERMISSION mount flag (that means something else now)
	
2004-02-10  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added check for i_size_read/write functions to configure.in
	(patch by Valient Gough)

2004-02-06  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fixed writing >= 2G files

	* Check file size on open (with generic_file_open())

	* Readpage calls flush_dcache_page() after storing data

	* Use i_size_read/write for accessing inode->i_size

	* Make loopback mount of a fuse file work
	
2004-02-04  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Released 1.1
	
2004-01-29  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Properly check if the inode exists in fuse_invalidate
	
2004-01-27  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added -q option for fusermount

	* fuse_unmount() now uses -q option of fusermount, so no error is
	printed if the cause of the program exit is that the filesystem
	has already been unmounted

	* Fix i_nlink correctness after rmdir/unlink

2004-01-26  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Released 1.1-pre2

2004-01-26  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix typo (thanks Marcos Dione)

	* Compile fixes for 2.4 kernels
	
2004-01-23  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix CONFIG_MODVERSIONS compile on 2.6
	
2004-01-22  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Write all pending data before a RELEASE operation
